# rookery

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLONE_ROSTER.md  DATALAKE.md  OPERATOR_LOOP.md  ROADMAP.md  VALIDATION.md
rookery/: __init__.py  cli.py  config.py  llm.py
rookery/clones/: model.py  persist.py  roster.py
rookery/datalake/: store.py
rookery/operator/: api.py  ask.py
rookery/tearing_down/: angles.py  pipeline.py  worker.py
rookery/tools/: __init__.py  git_history.py
tests/: test_angles.py  test_ask_guardrail.py  test_clone_append_only.py  test_config.py  test_datalake.py  test_git_history.py  test_llm_client.py  test_worker_and_persist.py  test_worker_multi_pass.py
